Buenas practicas y manejo de opciones invalidas elegidas por usuario.